# thClaws

crates/core/: Cargo.toml  build.rs
crates/core/resources/: model_catalogue.json
crates/core/src/: config.rs  gui.rs  ipc.rs  lib.rs  model_catalogue.rs  repl.rs  sdk_mcp.rs  secrets.rs  server.rs  session.rs  shared_session.rs  shell_dispatch.rs  uploads.rs
crates/core/src/line/: mod.rs  protocol.rs  session.rs  upload.rs
crates/core/src/providers/: agent_sdk.rs  mod.rs  opencode_go.rs  thclaws_gateway.rs
crates/core/src/sso/: builtin.rs  loopback.rs  mod.rs  storage.rs
crates/gateway/: Cargo.toml  Dockerfile
crates/gateway/src/: auth.rs  config.rs  error.rs  main.rs  sso.rs  state.rs
crates/gateway/src/keys/: mod.rs  pg.rs
crates/gateway/src/proxy/: anthropic.rs  google.rs  hal.rs  mod.rs  openai.rs  openrouter.rs  tavily.rs
crates/gateway/src/routes/: health.rs  keys.rs  mod.rs
frontend/src/components/: ChatView.tsx  LoginButton.tsx  SettingsModal.tsx
paperclip-adapter/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
paperclip-adapter/src/: index.ts  ui-parser.ts
paperclip-adapter/src/server/: execute.ts  index.ts  parse.ts  test.ts
